# birdjepa

./: .gitignore  AGENTS.md  README.md  TODO.md  justfile  launch.py  main.py  pyproject.toml  train.py
docs/: lejepa-reference.md  logbook.md
docs/issues/: checkpointable-nan.md
docs/issues/001-xcl-scan-errors/: README.md
docs/issues/002-dataloader-speed/: README.md
docs/issues/003-jax-benchmark-plan/: README.md
docs/issues/005-param-norm-mismatch/: README.md  SPEC.md
docs/issues/006-resume-loss-jump/: FINDINGS.md  idea5-roundtrip.csv  idea5_roundtrip.py  idea6-config.csv  idea6-dataloader.csv  idea6_iid_diagnostics.py  resume_opt_state_mismatch_sweep.py  roundtrip_ckpt_sweep.py
docs/src/: decisions.md  migration.md
notebooks/: 001_free_wins.py  006_resumption.py  birdset.py
rust/: Cargo.toml  bench_workers_results.csv
rust/benches/: spectrogram.rs
rust/docs/: pipeline-design.md
rust/src/: arrow.rs  decode.rs  lib.rs  loader.rs  shuffle.rs  spectrogram.rs
scripts/: bench_rust_loader.py  benchmark_jit.py  birdset_to_parquet.py  compare_ckpt_param_norms.py  scan_audio_dataset.py  test_filter_shard_bug.py
src/birdjepa/: __init__.py  _rs.pyi  augment.py  checkpoints.py  configs.py  helpers.py  pretrain.py
src/birdjepa/benchmark/: __init__.py  registry.py  reporting.py  schema.sql
src/birdjepa/data/: __init__.py
src/birdjepa/nn/: __init__.py  bird_mae.py  bird_mae_jax.py  bird_mae_pt.py  jepa.py  objectives.py  objectives_pt.py  perch.py  transformer.py  transformer_pt.py
sweeps/: benchmark.py  debug_jax.py  pretrain_cifar100.py  pretrain_xcm.py
sweeps/001_freewins/: README.md  adamw_vits_xcl.py  adamw_vits_xcl_lr_sweep.py  free_wins_vits_xcl.py  muon_test.py  muon_vits_xcl.py  test_sequential_loader.py
sweeps/benchmark/: birdmae.py  perch.py
tests/: conftest.py  test_bird_mae.py  test_bird_mae_pt.py  test_checkpoints.py  test_configs.py  test_data.py  test_objectives.py  test_objectives_pt.py  test_optim.py  test_perch.py  test_rs_loader.py  test_spectrogram_parity.py  test_transformer.py  test_transformer_parity.py  test_transformer_pt.py
