[project]
name = "birdjepa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samuel Stevens", email = "samuel.robert.stevens@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.22.9",
    "chex>=0.1.91",
    "datasets>=4.4.1",
    "duckdb>=1.4.3",
    "equinox>=0.13.2",
    "grain>=0.2.15",
    "huggingface-hub>=1.2.3",
    "jax[cuda12]>=0.8.2",
    "jaxtyping>=0.2.38",
    "librosa>=0.11.0",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "optax>=0.2.6",
    "polars>=1.36.1",
    "requests>=2.32.0",
    "safetensors>=0.5.0",
    "scikit-learn>=1.6.0",
    "submitit>=1.5.4",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.0",
    "tyro>=1.0.2",
    "wandb>=0.23.1",
]

[project.scripts]
birdjepa = "birdjepa:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ["F722"]  # jaxtyping string annotations

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: slow tests (e.g., large models, long-running parity checks)",
]
