[package]
name = "birdjepa-loader"
version = "0.1.0"
edition = "2021"

[lib]
name = "_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.27"
numpy = "0.27"
arrow = "54"
parquet = "54"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav"] }
realfft = "3"
rayon = "1.10"
crossbeam = "0.8"
rand = "0.8"
thiserror = "2"

[dev-dependencies]
criterion = "0.5"
glob = "0.3"

[[bench]]
name = "spectrogram"
harness = false
